@@ -6,6 +6,10 @@ Changes
 
 Bug fixes:
 
+- Numpy masked arrays with the normal Numpy mask sense (True == invalid) are
+  now supported as input for feature.shapes(). The mask keyword argument of the
+  function keeps to the GDAL sense of masks (nonzero == invalid) and the
+  documentation has been improved to communicate this (#1517).
 - The defaults for WarpedVRT's `src_nodata` and `nodata` keyword arguments are
   no longer None, but are markers for the default behavior: inheritance of
   nodata values from the VRT's source dataset. Values of `None` for these
